MET-6199 optimisation and improvements (#168)
* MET-6199 address sonar tech debt part 1

* MET-6199 address sonar tech debt part 2

* MET-6199 add coverage unit tests part 1

* MET-6199 add coverage unit tests part 2

* MET-6199 sonar recommendations

* MET-6199 fix failing unit test

* MET-6199 add coverage unit tests part 3

* MET-6199 add new transaction every time status is saved and clean up queries update

* MET-6199 use database queries to get counters

* MET-6199 remove unused imports

* MET-6199 update unit tests

* MET-6199 update unit tests part 2

* MET-6199 sonar recommendations

* MET-6199 add lock mechanism for status update

* MET-6199 enable ready condition